# daishan-refactor

./: .company  .gitignore  AGENTS.md  CLAUDE.md  README.en.md  README.md  UPDATELOG.md  main.py  nul  pyproject.toml  requirements.txt  test_daishan_env_loading.py  test_function_tracer.py  test_rag_stream_with_daishan.py  test_ragflow_improvements.py  test_ragflow_network.py  test_ragflow_quick.py  test_real_connection.py  test_retry_mechanism.py  test_solid_resource_modification.py  tmpclaude-fa8f-cwd  verify_imports.py
src/Digital_human_command_interface/: .env  Dockerfile  config.yaml  main.py  pyproject.toml  运行文档.md
src/Digital_human_command_interface/src/: __init__.py  intent_judgment.py  ragflow_client.py
src/Digital_human_command_interface/src/api/: routes.py
src/log-manager/: README.md  pyproject.toml
src/log-manager/docs/: operations.md  usage.md  validation.md
src/log-manager/log_manager/: __init__.py  config.py  console.py  context.py  decorators.py  memory.py  reporting.py  runtime.py  storage.py
src/log-manager/tests/: conftest.py  test_reporting.py  test_routing.py  test_runtime_behavior.py
src/rag_stream/: .dockerignore  .env  .gitignore  API接口文档.md  Dockerfile  README.md  config.yaml  docker-compose.prod.yml  docker-compose.yml  e2e_report_20260228_145747.json  lifespan.py  main.py  pyproject.toml  requirements.txt  shutdown.py  运行文档.md
src/rag_stream/docs/: API接口文档.docx  API接口文档.md  chatID记录.md  快速启动.md
src/rag_stream/docs/意图分类文档/: 岱山-指令集-固定问题.xlsx  岱山-指令集.xlsx  岱山-数据库问题.xlsx
src/rag_stream/src/: __init__.py  lifespan.py  main.py  startup.py
src/rag_stream/src/config/: settings.py
src/rag_stream/src/models/: emergency_entities.py  schemas.py
src/rag_stream/src/routes/: chat_routes.py
src/rag_stream/src/services/: chat_general_service.py  dify_service.py  fixed_question_flow_service.py  guess_questions_service.py  intent_mapping.example.json  intent_recognizer.py  personnel_dispatch_service.py  prompts.py  rag_service.py  source_dispath_srvice.py
src/rag_stream/src/utils/: __init__.py  (+10 more)
src/rag_stream/static/: chat-test.html
src/rag_stream/table_structure/: IPARK_AE_ACCIDENT_EVENT.xlsx  IPARK_AE_DEFEND_TARGET.xlsx  IPARK_AE_MATERIEL_TYPE.xlsx  IPARK_AE_MEDICAL_INSTITUTION.xlsx  IPARK_AE_RESCUE_TEAM.xlsx
src/rag_stream/tests/: README.md  TEST_DOCUMENTATION_INDEX.md  TEST_RESULTS.md  conftest.py  intent_classifier_test.py  run_intent_service_test.py  run_intent_service_test_with_normalization.py  test_api_general_e2e.py  test_base_intent_service.py  test_chat_general_core_logging.py  test_chat_general_service.py  test_chat_routes.py  test_daishan_sql_logging.py  test_dify_client_factory.py  test_dify_integration.py  test_emergency_resources.py  test_export_fixed_question_answers_script.py  test_fixed_question_flow_service.py  test_fixed_question_prompt_mapping_sync.py  test_geo_utils.py  test_guess_questions_prompts.py  test_guess_questions_service_fallback.py  test_health_endpoint.py  test_intent_classification.py  test_intent_fixed_question_settings.py  test_intent_judgment_general.py  test_intent_recognizer.py  test_intent_service_classification.py  test_intent_service_mock.py  test_intent_service_type3.py  test_lifespan_service_init.py  test_personnel_dispatch_service.py  test_query_by_sql.py  test_query_chat_config.py  test_query_chat_logging.py  test_query_chat_validation.py  test_query_placeholder_rewrite.py  test_rag_service_stream_end.py  test_ragflow_client_timeout.py  test_real_env.py  (+13 more)
(+6106 files in other folders)
