[project]
name = "daishan-master"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.9.1",
    "fastapi==0.104.1",
    "openai>=2.15.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-json-logger==2.0.7",
    "python-multipart==0.0.6",
    "pyyaml==6.0.1",
    "rag-stream",
    "requests==2.31.0",
    "uvicorn[standard]==0.24.0",
]

[tool.uv.workspace]
members = ["src/rag_stream"]

[tool.uv.sources]
rag-stream = { workspace = true }
