[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "log-manager"
version = "0.1.0"
description = "Low-overhead runtime observability with incremental local reporting."
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
include = ["log_manager*"]
exclude = ["openspec*", "tests*", "docs*"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
